--- a/index.yaml
+++ b/index.yaml
@@ -26,3 +26,33 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: auth_user
+  properties:
+  - name: username
+  - name: __key__
+    direction: desc
+
+- kind: healthplans_plan
+  properties:
+  - name: name
+  - name: __key__
+    direction: desc
+
+- kind: healthplans_plan
+  properties:
+  - name: name
+  - name: category
+  - name: __key__
+    direction: desc
+
+- kind: healthplans_plan
+  properties:
+  - name: provider_id
+  - name: name
+
+- kind: healthplans_provider
+  properties:
+  - name: name
+  - name: __key__
+    direction: desc
